ui/webui/resources/cr_components/composebox/composebox.css
/* ... */
:host(:not([is-collapsible])) #composebox {
  /* If the composebox is not expandable, meaning expanded_ is always true,
   * then the above transition will never be triggered. Instead, manually
   * start the animation so it expands as soon as it is rendered */
  height: 60px;
}

:host([expanded_]) #composebox {
  height: calc-size(auto, size);
  max-height: 422px;
  transition-duration: var(--expand-duration);
}

:host([is-collapsible][expanded_]) #composebox {
  min-height: 136px;
  max-height: 254px;
}

#inputContainer {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  padding-bottom: var(--input-bottom-spacing);
  overflow: hidden;
  width: 100%;
}

#textContainer {
  display: flex;
  flex-direction: row;
  padding-block: 8px 0;
  padding-inline: var(--text-input-inline-start-spacing) 0;
}

#iconContainer {
  --text-input-top-spacing: 8px;
  align-items: center;
  display: flex;
  height: 48px;
  justify-content: center;
}

#aimIcon {
  -webkit-mask-image: url(//resources/cr_components/searchbox/icons/search_spark.svg);
  -webkit-mask-position: center;
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-size: cover;
  background-color: var(--color-new-tab-page-composebox-input-icon);
  height: 24px;
  width: 24px;
}

@media (forced-colors: active) {
  #aimIcon {
    background-color: Highlight;
    border-radius: 4px;
  }
}

#inputWrapper {
  position: relative;
  width: 100%;
}

#input,
#smartCompose {
  box-sizing: border-box;
  font-family: inherit;
  font-size: inherit;
  line-height: 24px;
  min-height: 48px;
  max-height: 190px;
  padding-block: var(--text-input-top-spacing) 0;
  padding-inline: 12px var(--text-input-inline-end-spacing);
  scrollbar-width: none;
  width: 100%;
}

:host(:not[ntp-realbox-next-enabled]) #input {
  transition: padding var(--height-expand-duration) var(--standard-curve);
}

#input {
  animation: color-change 5s infinite;
  background-color: inherit;
  border: none;
  caret-color: var(--google-blue-500);
  color: var(--color-new-tab-page-composebox-font-light);
  field-sizing: content;
  mask-image: linear-gradient(transparent 7px, black calc(var(--text-input-top-spacing) + 7px));
  height: calc-size(fit-content, min(size + 4px, 190px));
  outline: none;
  position: relative;
  resize: none;
}

#input::placeholder {
  color: var(--color-new-tab-page-composebox-type-ahead);
}

#smartCompose {
  pointer-events: none;
  position: absolute;
  overflow: scroll;
  top: 0;
  left: 0;
}

:host(:not([smart-compose-enabled_])) #smartCompose {
  display: none;
}

#invisibleText {
  color: transparent;
  white-space: pre-wrap;
}

#ghostText {
  color: var(--color-new-tab-page-composebox-type-ahead);
  white-space: pre-wrap;
}

#tabChip {
  align-items: center;
  border: 1px solid var(--color-new-tab-page-composebox-type-ahead-chip);
  border-radius: 8px;
  box-sizing: border-box;
  color: var(--color-new-tab-page-composebox-type-ahead-chip);
  font-size: 12px;
  font-weight: 700;
  line-height: 28px;
  margin-left: 4px;
  padding: 6px 8px;
}

:host([expanded_]) #input,
:host([expanded_]) #smartCompose {
  --text-input-top-spacing: 12px;
}

:host([expanded_][is-collapsible]) #input {
  --text-input-top-spacing: 24px;
}

@keyframes color-change {
  0%, 100%   { caret-color: var(--google-blue-500); }
  25% { caret-color: var(--google-red-500); }
  50%  { caret-color: var(--google-yellow-500); }
  75% { caret-color: var(--google-green-500); }
}

#input::-webkit-search-decoration,
#input::-webkit-search-results-button,
#input::-webkit-search-results-decoration,
#input::-webkit-search-cancel-button{
  display: none;
}

:host([expanded_][show-dropdown_]) ntp-composebox-dropdown {
  padding-bottom: 8px;
}

.action-icon {
  --cr-icon-button-focus-outline-color:
      var(--color-searchbox-results-icon-focused-outline);
  --cr-icon-button-hover-background-color:
      var(--color-searchbox-results-background-hovered);
  --cr-icon-button-margin-end: 0;
  --cr-icon-button-size: 40px;
  position: absolute;
  right: 16px;
}

:host-context([dir='rtl']) .action-icon {
  left: 16px;
  right: unset;
}

#cancelIcon {
  --cr-icon-button-fill-color:
      var(--color-new-tab-page-composebox-cancel-button-light);
  /* SVG is size 20 with 5px of padding so actual size is 10px */
  --cr-icon-button-icon-size: 20px;
  position: absolute;
  top: 8px;
  /* Uses the same transitions as the submit button so they are in sync. */
  transition: var(--submit-enabled-transition);
}

:host([expanded_][is-collapsible]) #cancelIcon {
  top: 16px;
}

/* Hide the cancel icon when the composebox is expanded and no text is present. */
:host([is-collapsible]:not([submit-enabled_])) #cancelIcon {
  opacity: 0;
  pointer-events: none;
}

@keyframes fade-out-in {
  0% {
    opacity: 0;
  }

  73% {
    opacity: 0;
  }
}

#lensIcon {
  --cr-icon-button-icon-size: 20px;
  --cr-icon-image: url(//resources/cr_components/searchbox/icons/camera.svg);
  bottom: var(--input-bottom-spacing);
  display: none;
  opacity: 1;
  position: absolute;
  right: 16px;
  top: 6px;
}

#lensIcon:focus-visible:focus {
  box-shadow: none;
  outline: 2px solid var(--color-searchbox-results-icon-focused-outline);
  outline-offset: 2px;
}

:host([expanded_]) #lensIcon {
  animation: fade-out-in var(--lens-icon-animation-duration) linear;
  right: 68px;
  top: auto;
}

:host([lens-button-disabled_]) #lensIcon {
  opacity: 0.3;
}

:host-context([dir='rtl']) #lensIcon {
  left: 68px;
  right: unset;
}

:host(:not([show-submit_])) #submitContainer,
:host([ntp-realbox-next-enabled]) #submitContainer,
:host([show-submit_]:not([submit-enabled_])) #submitContainer{
  display: none;
}

#submitIcon {
  --cr-icon-button-fill-color: white;
  --cr-icon-button-icon-size: 16px;
  background-color: var(--color-new-tab-page-composebox-submit-button);
  bottom: var(--input-bottom-spacing);
  cursor: default; /* For Lens side panel. */
  opacity: 30%; /* For Lens side panel. */
  transition: var(--submit-enabled-transition);
}
/* ... */

